fix: file list item icon alignment (#1039)

--- a/app/assets/stylesheets/_sn.scss
+++ b/app/assets/stylesheets/_sn.scss
@@ -550,6 +550,10 @@
   padding: 1rem;
 }
 
+.p-4\.5 {
+  padding: 1.125rem;
+}
+
 .p-6 {
   padding: 1.5rem;
 }
